--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -62,6 +62,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scrip\Player\Bullet.cs" />
+    <Compile Include="Assets\Scrip\Player\Item.cs" />
     <Compile Include="Assets\Scrip\Player\Vitriban.cs" />
     <Compile Include="Assets\Scrip\Enemy\HealEnemy.cs" />
     <Compile Include="Assets\Scrip\ControllGame\Menu.cs" />
